--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ footer {
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+.topnav p {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -68,13 +68,13 @@ footer {
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.topnav p:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.topnav p.active {
   background-color: #ff8000;
   color: white;
 }
